# prysm

./: go.mod  go.sum
beacon-chain/blockchain/: head.go  head_sync_committee_info.go  head_sync_committee_info_test.go  light_client.go  options.go  receive_block.go  service.go
beacon-chain/core/: BUILD.bazel  domain.go  domain_test.go  signing_root.go  signing_root_test.go
beacon-chain/core/altair/: attestation_test.go  block.go  block_test.go  deposit_test.go
beacon-chain/core/blocks/: attestation.go  attestation_test.go  attester_slashing_test.go  block_regression_test.go  deposit.go  deposit_test.go  exit.go  exit_test.go  header_test.go  proposer_slashing.go  proposer_slashing_test.go  randao_test.go  signature.go  signature_test.go
beacon-chain/core/helpers/: BUILD.bazel  validators.go  validators_test.go
beacon-chain/core/state/: altair_transition_no_verify_sig_test.go  transition_test.go
beacon-chain/gateway/: helpers.go
beacon-chain/light/: event.go  event_debug.go  event_test.go  service.go
beacon-chain/light-update/: event.go  event_debug.go  event_test.go  service.go  update.go
beacon-chain/node/: light.go  node.go
beacon-chain/p2p/: BUILD.bazel  fork_test.go  message_id_test.go
beacon-chain/powchain/: BUILD.bazel  deposit_test.go
beacon-chain/rpc/: service.go
beacon-chain/sync/: pending_attestations_queue_test.go  pending_blocks_queue_test.go  validate_aggregate_proof.go  validate_aggregate_proof_test.go  validate_attester_slashing_test.go  validate_beacon_attestation_test.go  validate_beacon_blocks_test.go  validate_proposer_slashing_test.go  validate_sync_committee_message.go  validate_sync_committee_message_test.go  validate_voluntary_exit_test.go
cache/fifo/: queue.go  queue_test.go
cmd/light/: main.go
cmd/light-client/: README.md
cmd/lightclient/: README.md  main.go
encoding/ssz/: README.md  hashroot_test.go
endtoend/evaluators/: BUILD.bazel  operations.go  slashing.go
hack/: common.sh
proto/: ssz_proto_library.bzl
shared/attestationutil/: BUILD.bazel  attestation_utils.go
shared/depositutil/: BUILD.bazel  deposit.go  deposit_test.go
shared/interop/: BUILD.bazel  generate_genesis_state.go
shared/p2putils/: BUILD.bazel  fork.go  fork_test.go
shared/testutil/: altair.go  attestation.go  block.go  deposits.go  helpers.go  helpers_test.go  sync_aggregate.go
slasher/beaconclient/: BUILD.bazel  submit.go
slasher/rpc/: BUILD.bazel  server.go  server_test.go
tools/benchmark-files-gen/: main.go
tools/bootnode/: BUILD.bazel  (+1 more)
(+58 files in other folders)
