load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "domain.go",
        "signing_root.go",
        "slot_epoch.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/core",
    visibility = [
        "//beacon-chain:__subpackages__",
        "//endtoend/evaluators:__pkg__",
        "//fuzz:__pkg__",
        "//shared/attestationutil:__pkg__",
        "//shared/benchutil/benchmark_files:__subpackages__",
        "//shared/depositutil:__pkg__",
        "//shared/interop:__pkg__",
        "//shared/keystore:__pkg__",
        "//shared/p2putils:__pkg__",
        "//shared/testutil:__pkg__",
        "//shared/testutil/altair:__pkg__",
        "//slasher:__subpackages__",
        "//spectest:__subpackages__",
        "//tools:__subpackages__",
        "//validator:__subpackages__",
    ],
    deps = [
        "//beacon-chain/state:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//shared/bls:go_default_library",
        "//shared/bytesutil:go_default_library",
        "//shared/params:go_default_library",
        "//shared/timeutils:go_default_library",
        "//shared/version:go_default_library",
        "@com_github_ethereum_go_ethereum//common/math:go_default_library",
        "@com_github_ferranbt_fastssz//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "domain_test.go",
        "signing_root_test.go",
        "slot_epoch_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//beacon-chain/state/v1:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//shared/bls:go_default_library",
        "//shared/bytesutil:go_default_library",
        "//shared/params:go_default_library",
        "//shared/testutil:go_default_library",
        "//shared/testutil/assert:go_default_library",
        "//shared/testutil/require:go_default_library",
        "//shared/timeutils:go_default_library",
        "@com_github_google_gofuzz//:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
    ],
)
